Release notes for xmlBlaster (http://www.xmlBlaster.org)
The "r99999" numbers are Subversion revision numbers.

Changes for current svn
=======================

 o 18153  added CLIENTPROPERTY_MULTISUB_CHECKQOS to allow recognition of different filters on subscriptions having 
          the same XPATH or topic (without it making two subs with same XPATH but different filter would overwrite 
          eachother

 o 18149  EventPlugin protect against infinite loop of logging redirects
          logInfinitLoopSuppressDelayMillis=1000
	  -> Log messages inbetween one second are silently lost

 o r18147 made XPathFilter namespace-aware

 o r18143 SmtpClient.java properties added
          mail.smtp.socketFactory.port
	  mail.smtp.socketFactory.class
	  mail.smtp.starttls.enable

 o r18141 JdbcQueue.java: fixed bug wich caused MsgUnitStore size to be wrong after an Overflow

 o r18131 added XmlRpcCustomProxy to XMLRPC to allow custom non-standard clients to access the XMLRPC protocol
          directly. Can be used for tunnelling standard xmlBlaster operations such subscribe publish .... to 
	  other methods specified by the customer

 o r18124 Added getType() getVersion() to I_Manager.java
          If you have coded a security plugin please add those methods

 o r18108 Fixed LOCAL protocol without callback configuration (e.g. FilePollerPlugin and FileWatcherPlugin)
          The fallback was SOCKET and the cb ping failed
	  Now the LOCAL client is pinged properly by the server (to allow resource cleanup)

 o r18077 HtPasswd SecurityQos
          Added coding to base64 endoce/decode the password (prefix "__base64:"), needed if it contains invalid XML chars '&' and '<'

 o r18076 XmlScriptInterpreter: Fixed xml encoding of parsed key and qos ('&' and '<' chars)

 o r18070 JMX reactivateDispatcherThread() method added for error diagnostic of inactive callback thread
 o r18069 ServerDispatchManager.java Smaller synchronize for this.connectionStatusListeners
